--- a/kindergarden/package.json
+++ b/kindergarden/package.json
@@ -4,12 +4,22 @@
   "description": "main module of kindergarden",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "test:watch": "mocha -w"
   },
   "keywords": [
     "babys",
     "service"
   ],
   "author": "Jaime Salas",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "uuid": "^3.2.1"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.1",
+    "sinon": "^4.3.0",
+    "supertest": "^3.0.0"
+  }
 }
